--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,17 +4,21 @@ spring.h2.console.path=/h2-console
 
 #h2 db
 spring.datasource.url=jdbc:h2:~/test;
-spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.generate-ddl=true
+spring.jpa.defer-datasource-initialization-mode=always
+
 
 #hibernate ??
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 
 #Bulk Insert
 spring.jpa.properties.hibernate.jdbc.batch_size = ${batchSize}
