doc : swagger error resolve

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,7 +39,9 @@ spring.main.allow-bean-definition-overriding=true
 # swaggerdoc
 springdoc.version=v1
 springdoc.swagger-ui.url=/swagger-ui.html
-springdoc.packages-to-scan=com.example.demo
+#springdoc.packages-to-scan=*
+springdoc.packagesToScan=com.swagger.docs
+springdoc.paths-to-match=/api/**
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs/json
 springdoc.api-docs.groups.enabled=true
