--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-	id 'org.springframework.boot' version '2.6.12'
+	id 'org.springframework.boot' version '2.7.0'
+	id 'org.springdoc.openapi-gradle-plugin' version "1.4.0"
 	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
 	id 'java'
 }
@@ -25,9 +26,12 @@ dependencies {
 //	Redis Dependencies - Login, Logout 기능구현
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+//	Swagger
+//	implementation 'org.springdoc:springdoc-openapi-security:1.6.11'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
+
 //	Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
 
 //	Mail Service
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
@@ -37,10 +41,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
 
+	runtimeOnly 'com.h2database:h2:1.4.200'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
