fix : permission bug 해결, USER, permitAll() 코드 순서 문제

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,5 +52,9 @@ springdoc.default-produces-media-type=application/json;charset=UTF-8
 logging.level.root=INFO
 logging.level.org.hibernate.SQL = DEBUG
 
+#HikariCP
+spring.datasource.hikari.maximum-pool-size=20
+
+
 batchSize = 500
 rows = 10000
