feat : Login Redirect Agent

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,6 +55,9 @@ logging.level.org.hibernate.SQL = DEBUG
 #HikariCP
 spring.datasource.hikari.maximum-pool-size=20
 
+sending.email = localhost:8080
+login.redirect_url =https://www.naver.com
+
 
 batchSize = 500
 rows = 10000
