feat : actuator prohibit smtp issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,6 +58,15 @@ spring.datasource.hikari.maximum-pool-size=20
 sending.email = localhost:8080
 login.redirect_url =https://www.naver.com
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ymecca730135@gmail.com
+spring.mail.password=aykwvqsmzvpmnjhh
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
+management.health.mail.enable=false
 
 batchSize = 500
 rows = 10000
