--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,7 @@ spring.main.allow-bean-definition-overriding=true
 springdoc.version=v1
 springdoc.swagger-ui.url=/swagger-ui.html
 #springdoc.packages-to-scan=*
-springdoc.packagesToScan=com.swagger.docs
+springdoc.packagesToScan=com.econovation.idp
 springdoc.paths-to-match=/api/**
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs/json
