--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 	id 'java'
 }
 
-group = 'com.swagger'
+group = 'com.econovation'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
@@ -42,8 +42,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
-
-	runtimeOnly 'com.h2database:h2:2.1.214'
+//	implementation 'mysql-connector-java:8.0.22'
+	//	runtimeOnly 'com.h2database:h2:2.1.214'
+	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
