--- a/build.gradle
+++ b/build.gradle
@@ -35,12 +35,14 @@ dependencies {
 
 //	Mail Service
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
-
 //  spring data jpa
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// Spring actuator
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+
 	compileOnly 'org.projectlombok:lombok'
 //	implementation 'mysql-connector-java:8.0.22'
 	//	runtimeOnly 'com.h2database:h2:2.1.214'
@@ -52,7 +54,8 @@ dependencies {
 		annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 		annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
-// Spring actuator
+
+
 	jar { enabled = false }
 
 }
