--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,17 @@
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
 
+# Actuator & Prometheus
+
+#spring.application.name=econovation
+#management.endpoints.web.base-path= /application
+#management.endpoints.web.exposure.include= "prometheus", health,info,beans,conditions
+#management.endpoints.web.exposure.exclude= threaddump, heapdump
+#management.endpoint.health.show-details=always
+management.health.mail.enabled=false
+management.endpoints.web.exposure.include= *
+management.endpoint.health.show-details= always
+#management.metrics.tags.application= ${spring.application.name}
 #MySQL8 DB
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -12,6 +23,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=9301
+
 
 #hibernate ??
 spring.jpa.properties.hibernate.format_sql=true
@@ -55,7 +67,7 @@ spring.datasource.hikari.maximum-pool-size=20
 
 sending.email = localhost:8080
 login.redirect_url =https://www.naver.com
-
+debug=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=ymecca730135@gmail.com
@@ -64,7 +76,7 @@ spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
-management.health.mail.enable=false
 
+server.port=7000
 batchSize = 500
 rows = 10000
