feat : update에 email field 인증 삭제

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,9 +50,9 @@ springdoc.cache.disabled=true
 springdoc.default-consumes-media-type=application/json;charset=UTF-8
 springdoc.default-produces-media-type=application/json;charset=UTF-8
 # logging
-logging.level.root=INFO
+#logging.level.root=INFO
 logging.level.org.hibernate.SQL = DEBUG
-
+logging.level.org.springframework.boot.autoconfigure = ERROR 
 #HikariCP
 spring.datasource.hikari.maximum-pool-size=20
 
@@ -68,6 +68,6 @@ spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-server.port=7000
+server.port=8080
 batchSize = 500
 rows = 10000
