hotfix : springboot 3.0 -> 2.7.6 remigration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ management.health.mail.enabled=false
 management.endpoints.web.exposure.include= *
 management.endpoint.health.show-details= always
 #MySQL8 DB
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.defer-datasource-initialization-mode=always
@@ -14,7 +14,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/econovation?useSSL=false&useUn
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=9301
+spring.datasource.password=dltjgus119
 
 #hibernate ??
 spring.jpa.properties.hibernate.format_sql=true
@@ -29,18 +29,15 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=create
 spring.jpa.open-in-view = false
 
 # Redis Dependencies - Login, Logout ????
-spring.redis.host=localhost
-spring.redis.port=6379
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
 spring.jwt.secret-key =SECRET_KEY
 spring.jwt.blacklist.access-token =BlackList_AccessToken_
 spring.main.allow-bean-definition-overriding=true
 
 # Swagger
-#spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-# swaggerdoc
 springdoc.version=v1
 springdoc.swagger-ui.url=/swagger-ui.html
-#springdoc.packages-to-scan=*
 springdoc.packagesToScan=com.econovation.idp
 springdoc.paths-to-match=/api/**
 springdoc.swagger-ui.path=/swagger-ui.html
@@ -49,12 +46,14 @@ springdoc.api-docs.groups.enabled=true
 springdoc.cache.disabled=true
 springdoc.default-consumes-media-type=application/json;charset=UTF-8
 springdoc.default-produces-media-type=application/json;charset=UTF-8
+
+
 # logging
 #logging.level.root=INFO
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.springframework.boot.autoconfigure = ERROR 
 #HikariCP
-spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.maximum-pool-size=30
 
 sending.email = localhost:8080
 login.redirect_url =https://www.naver.com
