feat : 자동 token유무에 따른 자동 라우팅 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 #h2 console
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
+server.error.include-exception=false
+server.error.include-stacktrace=never
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force-response=true
+logging.level.org.springframework.web=DEBUG
+spring.mvc.log-request-details=true
 
 management.health.mail.enabled=false
 management.endpoints.web.exposure.include= *
