--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,37 @@
-version: "2"
+version: "3"
 services:
   db:
-    container_name: spring-db
-    image: mysql
-    environment:
-      MYSQL_DATABASE: econovation
-      MYSQL_USER: root
-      MYSQL_PASSWORD: dltjgus119
-      MYSQL_ROOT_PASSWORD: dltjgus119
-    volumes:
-      - ./db/data:/var/lib/mysql:rw
-    ports:
-      - "3306:3306"
     restart: always
-  cache:
+    ports:
+      - 3306:3306
+      - ./db/conf.d:/etc/mysql/conf.d
+      - ./db/data:/var/lib/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=dltjgus119
+      - TZ=Asia/Seoul
+      - MYSQL_DATABASE=econovation
+  redis:
     container_name: redis
-    image: redis:alpine
+    image: redis
     ports:
       - 6379:6379
-    depends_on:
-      - db
+    command: ["redis-server", "--protected-mode", "no"]
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   app:
+    build: .
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/econovation?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: dltjgus119
     container_name: spring-app
-    image: openjdk:17-slim
+    image: blackbean99/econovation_idp:latest
+    links:
+      - redis
     ports:
-      - "8080:8080"
-    volumes:
-      - ./app:/app
-    working_dir: /app
-    command: ["./gradlew", "bootrun"]
+      - 8080:8080
     depends_on:
       - db
+      - redis
     restart: always
+    tty: true
