--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,12 @@ version: "3"
 services:
   db:
     restart: always
+    image: mysql:8.0
     ports:
-      - 3306:3306
-      - ./db/conf.d:/etc/mysql/conf.d
-      - ./db/data:/var/lib/mysql
+      - 3308:3306
     environment:
+      - ./db/conf.d:/etc/mysql/conf.d
+      - ./db/data/:/var/lib/mysql/
       - MYSQL_ROOT_PASSWORD=dltjgus119
       - TZ=Asia/Seoul
       - MYSQL_DATABASE=econovation
