--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,7 +73,7 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Image Management
-file.path=/src/main/image/
+file.path=/Users/blackbean/IdeaProjects/ECONOVATION_IDP/image/
 
 server.port=8080
 batchSize = 500
