feat : Cookie 버전 Controller 추가

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ src/main/resources/application.properties
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
+image
+image/**
 
 ### IntelliJ IDEA ###
 .idea
