feat : RequestURL 쿠키로 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,7 +74,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Image Management
 file.path=/Users/blackbean/IdeaProjects/ECONOVATION_IDP/image/
-
+login.page.url=http://auth.econovation.kr/
 server.port=8080
 batchSize = 500
 rows = 10000
