--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/econovation?useSSL=false&useUn
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=dltjgus119
+spring.datasource.password=dltjgus119@@
 
 #hibernate ??
 spring.jpa.properties.hibernate.format_sql=true
@@ -74,7 +74,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 login.page.url = http://auth.econovation.kr/
 # Image Management
 file.path=/Users/blackbean/IdeaProjects/ECONOVATION_IDP/image/
-login.page.url=http://auth.econovation.kr/
 server.port=8080
 batchSize = 500
 rows = 10000
