--- a/.github/workflows/BuildApiServer.yml
+++ b/.github/workflows/BuildApiServer.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: ./Whatnow-Api
+          context: ./ECONOVATION_IDP
           # image push 최적화
           push: true
-          tags: ${{secrets.NCP_CONTAINER_REGISTRY}}/whatnow-api:${{ steps.get_version.outputs.VERSION }}
+          tags: ${{secrets.NCP_CONTAINER_REGISTRY}}/econovation-idp:${{ steps.get_version.outputs.VERSION }}
