--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,30 @@
 plugins {
 	id 'org.springframework.boot' version '2.7.6'
 //	id 'org.springdoc.openapi-gradle-plugin' version "1.4.0"
+	id 'com.diffplug.spotless' version '6.11.0'
+	id "org.sonarqube" version "3.5.0.2730"
 	id 'io.spring.dependency-management' version '1.1.0'
 	id 'java'
+	id 'jacoco'
 }
+apply plugin: 'org.sonarqube'
+
+
+sonarqube {
+	properties {
+		property 'sonar.projectKey', 'Econovation-IDP-Backend'
+		property 'sonar.organization', 'econovation'
+		property 'sonar.host.url', 'https://sonarcloud.io'
+		property 'sonar.sources', 'src'
+		property 'sonar.language', 'java'
+		property 'sonar.sourceEncoding', 'UTF-8'
+		property 'sonar.test.inclusions', '**/*Test.java'
+		property 'sonar.exclusions', '**/test/**, **/Q*.java, **/*Doc*.java, **/resources/** ,**/*Application*.java , **/*Config*.java,' +
+				'**/*Dto*.java, **/*Request*.java, **/*Response*.java ,**/*Exception*.java ,**/*ErrorCode*.java'
+		property 'sonar.java.coveragePlugin', 'jacoco'
+	}
+}
+
 
 group = 'com.econovation.idp'
 version = '0.0.1-SNAPSHOT'
@@ -15,6 +36,20 @@ configurations {
 	}
 }
 
+//root project docs
+//allprojects {
+//	apply plugin: 'java'
+//	apply plugin: 'jacoco'
+//	apply plugin: 'org.springframework.boot'
+//	apply plugin: 'io.spring.dependency-management'
+//	apply plugin: 'org.springdoc.openapi-gradle-plugin'
+
+//	group = 'com.econovation.idp'
+//	version = '0.0.1-SNAPSHOT'
+jacoco {
+	toolVersion = "0.8.7"
+	reportsDir = file("$buildDir/customJacocoReportDir")
+}
 repositories {
 	mavenCentral()
 }
