--- a/.github/workflows/BuildApiServer.yml
+++ b/.github/workflows/BuildApiServer.yml
@@ -39,7 +39,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
 
       - name: Execute Gradle build
-        run: ./gradlew :DuDoong-Api:build --no-daemon
+        run: ./gradlew :ECONOVATION_IDP:build --no-daemon
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
