--- a/.github/workflows/BuildApiServer.yml
+++ b/.github/workflows/BuildApiServer.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java-version: [ 11 ]
+        java-version: [ 17 ]
     outputs:
       version: ${{ steps.get_version.outputs.BRANCH_NAME }}
 
@@ -39,7 +39,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
 
       - name: Execute Gradle build
-        run: ./gradlew :ECONOVATION_IDP:build --no-daemon
+        run: ./gradlew build --no-daemon
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
