feat: Annotation change

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -77,3 +77,8 @@ file.path=/Users/blackbean/IdeaProjects/ECONOVATION_IDP/image/
 server.port=8080
 batchSize = 500
 rows = 10000
+
+
+
+swagger.user = root
+swagger.password = root
