--- a/IDP-Api/build.gradle
+++ b/IDP-Api/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'commons-io:commons-io:2.6'
     implementation project(':IDP-Domain')
     implementation project(':IDP-Common')
     implementation project(':IDP-Infrastructure')
