--- a/IDP-Infrastructure/build.gradle
+++ b/IDP-Infrastructure/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     api('com.fasterxml.jackson.datatype:jackson-datatype-jdk8')
     api('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
     api 'com.sun.mail:javax.mail:1.6.2'
+    implementation project(path: ':IDP-Common')
 
     testImplementation "org.springframework.cloud:spring-cloud-starter-contract-stub-runner:3.1.5"
     testImplementation "org.springframework.cloud:spring-cloud-contract-wiremock:3.1.5"
