--- a/IDP-Api/build.gradle
+++ b/IDP-Api/build.gradle
@@ -2,6 +2,9 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    //jwt
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'commons-io:commons-io:2.8.0'
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation project(':IDP-Domain')
