--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-IDP-Api/src/main/resources/application.properties
+.env
+
 ### STS ###
 .apt_generated
 .classpath
