build : Multimodule 설정

--- a/IDP-Api/src/main/resources/application.yml
+++ b/IDP-Api/src/main/resources/application.yml
@@ -4,17 +4,11 @@ spring:
       - infrastructure
       - domain
       - common
-  data:
-    redis:
-      host: ${REDIS_HOST:localhost}
-      port: ${REDIS_PORT:6379}
 throttle:
   greedyRefill: ${THROTTLE_GREEDY_REFILL:10}
   overdraft: ${THROTTLE_OVERDRAFT:10}
-auth:
-  jwt:
-    blacklist:
-      prefix: ${JWT_BLACKLIST_PREFIX:BlackList_AccessToken_}
+
+
 login:
   page:
     url: ${LOGIN_PAGE_URL:http://localhost:8080/login}
@@ -24,13 +18,16 @@ login:
       url: ${LOGIN_FAILURE_URL:http://localhost:8080/loginFailure}
 acl:
   whiteList: ${ACL_WHITE_LIST:localhost}
-
+auth:
+  jwt:
+    blacklist:
+      prefix: ${JWT_BLACKLIST_PREFIX:jwt_blacklist_}
 springdoc:
   version: v1
   default-produces-media-type: application/json
   default-consumes-media-type: application/json
-  packages-to-scan: com.econovation.idp
-  path-to-match: /api/**
+  packages-to-scan: com.econovation.idpapi
+#  path-to-match: /**
   swagger-ui:
     path: /swagger-ui.html
     tags-sorter: alpha
@@ -52,6 +49,8 @@ swagger:
 mail:
   destination:
     url: ${MAIL_DESTINATION_URL:http://localhost:8080}
+file:
+  path: ${IMAGE_SAVE_URL:classpath:static/images/}
 ---
 spring:
   config:
