--- a/IDP-Domain/build.gradle
+++ b/IDP-Domain/build.gradle
@@ -3,12 +3,11 @@ jar { enabled = true }
 
 dependencies {
 //    multipart
-    api 'org.springframework.boot:spring-boot-starter-web'
     api 'org.springframework.boot:spring-boot-starter-data-jpa'
     api 'mysql:mysql-connector-java'
 
     // h2 driver
-    runtimeOnly 'com.h2database:h2'
+//    runtimeOnly 'com.h2database:h2'
 
     implementation project(':IDP-Common')
     implementation project(':IDP-Infrastructure')
