--- a/IDP-Infrastructure/build.gradle
+++ b/IDP-Infrastructure/build.gradle
@@ -12,6 +12,7 @@ dependencies {
 
     testImplementation "org.springframework.cloud:spring-cloud-starter-contract-stub-runner:3.1.5"
     testImplementation "org.springframework.cloud:spring-cloud-contract-wiremock:3.1.5"
+//    api project(':IDP-Common')
 }
 
 tasks.named('test') {
