--- a/.github/workflows/develop-branch-test-coverage.yml
+++ b/.github/workflows/develop-branch-test-coverage.yml
@@ -42,8 +42,8 @@ jobs:
       - name: test
         run: ./gradlew test --info --stacktrace --no-daemon
 
-      - name: analyze
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew sonar --info --stacktrace --no-daemon
+#      - name: analyze
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#        run: ./gradlew sonar --info --stacktrace --no-daemon
