--- a/IDP-Infrastructure/src/main/resources/application-infrastructure.yml
+++ b/IDP-Infrastructure/src/main/resources/application-infrastructure.yml
@@ -1,7 +1,9 @@
-file:
-  path: ${IMAGE_SAVE_URL:classpath:static/images/}
-
 spring:
+  data:
+    redis:
+      host: ${REDIS_HOST:localhost}
+      password: ${REDIS_PASSWORD:}
+      port: ${REDIS_PORT:6379}
   mail:
     host: smtp.gmail.com
     port: 587
